--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
   <meta charset="UTF-8">
-  <title>DronePalvelu</title>
+  <title>DronePalvelu – Etusivu</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,71 +12,24 @@
       <p>Ilmakuvaukset ammattilaiselta</p>
     </div>
 
+    <!-- Navigointi -->
     <nav class="navbar">
       <ul>
-        <li><a href="#tietoa">Tietoa</a></li>
-        <li><a href="#kalusto">Kalusto</a></li>
-        <li><a href="#hinnasto">Hinnasto</a></li>
-        <li><a href="#galleria">Galleria</a></li>
-        <li><a href="#yhteydenotto">Yhteydenotto</a></li>
+        <li><a href="index.html">Etusivu</a></li>
+        <li><a href="tietoa.html">Tietoa meistä</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="hinnasto.html">Hinnasto</a></li>
+        <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
       </ul>
     </nav>
 
     <div class="content">
-      <section id="tietoa">
-        <h2>Tietoa Meistä</h2>
-        <p>Tarjoamme laadukkaita drone-kuvauksia tapahtumiin, rakennusprojekteihin ja maisemakuvaukseen. Yli 10 vuoden kokemus ilmakuvauksesta.</p>
-      </section>
-
-      <section id="kalusto">
-        <h2>Kalusto</h2>
-        <ul>
-          <li>DJI Mavic 3 Pro</li>
-          <li>DJI Mini 4K</li>
-          <li>FPV-dronet nopeisiin kuvauksiin</li>
-        </ul>
-      </section>
-
-      <section id="hinnasto">
-        <h2>Hinnasto</h2>
-        <ul>
-          <li>Tapahtumakuvaus: alkaen 250€</li>
-          <li>Rakennustyömaan dokumentointi: alkaen 300€</li>
-          <li>FPV-kuvaus: alkaen 350€</li>
-        </ul>
-      </section>
-
-      <section id="galleria">
-        <h2>Galleria</h2>
-        <p>Esimerkkikuvia ja -videoita:</p>
-        <div class="gallery">
-          <img src="kuva1.jpg" alt="Ilmakuva 1">
-          <img src="kuva2.jpg" alt="Ilmakuva 2">
-          <video controls>
-            <source src="video1.mp4" type="video/mp4">
-          </video>
-        </div>
-      </section>
-
-      <section id="yhteydenotto">
-        <h2>Yhteydenotto</h2>
-        <form>
-          <label for="nimi">Nimi:</label><br>
-          <input type="text" id="nimi" name="nimi"><br>
-
-          <label for="email">Sähköposti:</label><br>
-          <input type="email" id="email" name="email"><br>
-
-          <label for="viesti">Viesti:</label><br>
-          <textarea id="viesti" name="viesti" rows="4"></textarea><br>
-
-          <input type="submit" value="Lähetä">
-        </form>
-      </section>
+      <h2>Tervetuloa DronePalveluun!</h2>
+      <p>Tarjoamme huipputason drone-kuvauspalvelut koko Suomessa. Tutustu meihin, kalustoomme ja työnäytteisiimme!</p>
     </div>
 
     <footer>
-      <p>&copy; 2025 DronePalvelu Oy – Kaikki oikeudet pidätetään.</p>
+      <p>&copy; 2025 DronePalvelu Oy</p>
     </footer>
   </div>
 </body>
