--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Etusivu</a></li>
-        <li><a href="about.html">Tietoa meistä</a></li>
+        <li><a href="tietoa.html">Tietoa meistä</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="hinnasto.html">Hinnasto</a></li>
-        <li><a href="contact.html">Yhteystiedot</a></li>
+        <li><a href="yhteystiedot.html">Yhteystiedot</a></li>
       </ul>
     </nav>
 
